updated manage html page and img info dict

--- a/connexus_test/view_astreams.html
+++ b/connexus_test/view_astreams.html
@@ -20,7 +20,7 @@
   {% for stream in streams %}
 		<div id="img-box">
     	<b><a href="/viewsingle/{{ stream }}">{{ stream }}</a></b></br>
-			<img src="{{ streams[stream]['cover'] }}"></br>
+			<img src="{{ streams[stream]['cover'][0] }}"></br>
 		</div>
 	{% endfor %}
 	
