--- a/connexus_test/manage.html
+++ b/connexus_test/manage.html
@@ -30,10 +30,35 @@
 				<th>Delete</th>
 			</tr>
 			{% for stream in streams %}
-				<tr><td>
-					<b><a href="/viewsingle/{{ stream }}">{{ stream }}<a></b>
-				</td></tr> 		
+				<tr>
+					<td>
+						<b><a href="/viewsingle/{{ stream }}">{{ stream }}<a></b>
+					</td>
+					<td>
+						{{ streams[stream]['stream_urls'][-1][1] }}
+					</td>
+					<td>
+						{{ streams[stream]['stream_len'] }}
+					</td>
+
+				</tr> 		
 			{% endfor %}
+		</table>
+
+		</br>
+		</br>
+		<h3>Streams I subscribe to</h3></br>
+		<table rules="cols" frame="mhs">
+			<tr>
+				<th>Name</th>
+				<th>Last New Picture</th>
+				<th>Number of Pictures</th>
+				<th>Views</th>
+				<th>Unsubscribe</th>
+			</tr>
+			<tr>
+				<td>Testname</td>
+			</tr>
 		</table>
 	{% endif %}
 	
