--- a/connexus_test/search_results.html
+++ b/connexus_test/search_results.html
@@ -13,11 +13,11 @@
 		<h3><a href="/manage">Manage</a> | <a href="/create">Create</a> | <a href="/viewall">View</a> | <a href="/search">Search</a> | <a href="/trending">Trending</a> | <a href="/social">Social</a> </h3>
 	</nav>
 
-	<p>Nothing here yet, this is the trending page - ADD RADIO BUTTONS</p>
-
+	<p>{{ command }}</p>
+	</br>
 
 	
- 	{% for stream in streams %}
+  {% for stream in streams %}
 		<div id="img-box">
     	<b><a href="/viewsingle/{{ stream }}">{{ stream }}</a></b></br>
 			<img src="{{ streams[stream]['cover'][0] }}"></br>
@@ -35,7 +35,6 @@
 
 		<a href="{{ url|safe }}">{{ url_linktext }}</a> 
 	</footer>
-
 
 	</body>
 </html>
