rid of global, use datastore queries

--- a/connexus_test/manage.html
+++ b/connexus_test/manage.html
@@ -35,10 +35,10 @@
 						<b><a href="/viewsingle/{{ stream }}">{{ stream }}<a></b>
 					</td>
 					<td>
-						{{ streams[stream]['stream_urls'][-1][1] }}
+						{{ streams[stream][stream]['stream_urls'][-1][1] }}
 					</td>
 					<td>
-						{{ streams[stream]['stream_len'] }}
+						{{ streams[stream][stream]['stream_len'] }}
 					</td>
 
 				</tr> 		
