--- a/connexus_test/trending.html
+++ b/connexus_test/trending.html
@@ -13,17 +13,7 @@
 		<h3><a href="/manage">Manage</a> | <a href="/create">Create</a> | <a href="/viewall">View</a> | <a href="/search">Search</a> | <a href="/trending">Trending</a> | <a href="/social">Social</a> </h3>
 	</nav>
 
-	<p>Nothing here yet, this is the trending page - ADD RADIO BUTTONS</p>
-
-
-	
- 	{% for stream in streams %}
-		<div id="img-box">
-    	<b><a href="/viewsingle/{{ stream }}">{{ stream }}</a></b></br>
-			<img src="{{ streams[stream]['cover'][0] }}"></br>
-		</div>
-	{% endfor %}
-	
+	<p>Nothing here yet, this is the trending page</p>
 
 	<footer>
 		</br>
