--- a/connexus_test/trending.html
+++ b/connexus_test/trending.html
@@ -13,7 +13,24 @@
 		<h3><a href="/manage">Manage</a> | <a href="/create">Create</a> | <a href="/viewall">View</a> | <a href="/search">Search</a> | <a href="/trending">Trending</a> | <a href="/social">Social</a> </h3>
 	</nav>
 
-	<p>Nothing here yet, this is the trending page</p>
+	<h3>Top 3 Trending Streams</h3>
+	<div id="img-box">
+	</div>
+	<div id="img-box">
+	</div>
+
+	<form action="" method="post">
+		<input type="checkbox" name="no_reports" values="no_reports">
+		<label for="no_reports">No reports</label></br>
+		<input type="checkbox" name="5mins" values="5mins">
+		<label for="5mins">Every 5 minutes</label></br>
+		<input type="checkbox" name="hour" values="hour">
+		<label for="hour">Every 1 hour</label></br>
+		<input type="checkbox" name="day" values="day">
+		<label for="day">Every day</label></br></br>
+		Update rate for email trending report</br></br>
+		<input type="submit" value="Update rate">
+	</form>
 
 	<footer>
 		</br>
