--- a/connexus_test/view_sstream.html
+++ b/connexus_test/view_sstream.html
@@ -23,11 +23,13 @@
 		</div>
 	{% endfor %}
 	
+	{% if streams[this_stream][this_stream]['stream_len'] > 3 %}
 	{% if not more_check %}
 		<form>
 			<input type="hidden" name="more_check" value="1">
-			<input type="submit" value="View more">
+			<input type="submit" value="View all">
 		</form>
+	{% endif %}
 	{% endif %}
 
 
@@ -40,6 +42,15 @@
 			<input type="file" name="new_image"><br>
 			<input type="submit" value="Add image">
 		</form>
+	</div>
+
+	
+	<div id="sub-box">
+	<!-- subscribe button, change to get? -->
+	<form action="/viewsingle/{{ this_stream }}" method="post">
+		<input type="hidden" name="sub" value="{{ stream }}">
+		<input type="submit" value="Subscribe to this stream">
+	</form>
 	</div>
 
 
