finished cron jobs, updated create page

--- a/connexus_test/create_stream.html
+++ b/connexus_test/create_stream.html
@@ -30,7 +30,7 @@
 			<h4>Tag your stream</h4><br><br>
 			<!-- leave as file submission/required for now, change later -->
 			<input type="file" name="cover_url"><br>
-			<h4>URL to cover image <!--<br>(Can be empty)--></h4><br>
+			<h4>Upload cover image (can be empty)</h4><br>
 			</div>
 			<input type="submit" value="Create Stream">
 		</form>
@@ -40,10 +40,7 @@
 	<footer>
 		</br>
 		<hr>
-		<form action="/invite" method="post">Testing email invite:
-		  <input value="invite_email" name="invite_email">
-		  <input type="submit" value="send">
-		</form>
+		<p>&copy; Victoria Bill and Steve Rutherford</p>
 
 		<a href="{{ url|safe }}">{{ url_linktext }}</a> 
 	</footer>
