--- a/connexus_test/view_sstream.html
+++ b/connexus_test/view_sstream.html
@@ -58,10 +58,7 @@
 	<footer>
 		</br>
 		<hr>
-		<form action="/invite" method="post">Testing email invite:
-		  <input value="invite_email" name="invite_email">
-		  <input type="submit" value="send">
-		</form>
+		<p>&copy; Victoria Bill and Steve Rutherford</p>
 
 		<a href="{{ url|safe }}">{{ url_linktext }}</a> 
 	</footer>
