fixing geo view

--- a/connexus_test/view_sstream.html
+++ b/connexus_test/view_sstream.html
@@ -67,7 +67,7 @@
 	{% endif %}
 
 	</br>
-	<a class="btn btn-default" href="/geo" role="button">Geo view</a>
+	<a class="btn btn-default" href="/geo/{{ this_stream }}" role="button">Geo view</a>
 
 </div>
 
