--- a/connexus_test/geo_view.html
+++ b/connexus_test/geo_view.html
@@ -11,6 +11,11 @@
 	<link rel="stylesheet" href="/stylesheets/main.css" />
 	<link type="text/css" rel="stylesheet" href="/css/style.css" />
 	<link rel="stylesheet" href="/stylesheets/main.css" />
+	<link rel="stylesheet" href="../css/iThing.css" type="text/css" />
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/jquery-ui.js"></script>
+  <script src="/js/jQDateRangeSlider-min.js"></script>
+	
 
 </head>
   <body>
@@ -23,7 +28,7 @@
 	</nav>
 
 
-	<p>geo view test page</p>
+	<p>Geo view for {{ this_stream }}</p>
 	<br>
 	<br>
 	<div id="sub-box"></div>
@@ -34,8 +39,35 @@
 			</div>
 	</div>
 
+	<div id="slider"></div>
 
 
+    <script>
+    //<!--
+      $("#slider").dateRangeSlider({
+ 		 bounds:{
+    	min: new Date(2012, 0, 1),
+    	max: new Date(2014, 9, 31)
+  		}},
+  		{
+ 		 step:{
+    		days: 1
+  		}},
+  		{
+  		defaultValues:{
+    	min: new Date(2012, 0, 1),
+    	max: new Date(2014, 9, 31)
+  		}
+  	});
+     $("#slider").bind("valuesChanged", function(e, data){
+     	 var min = data.values.min;
+    	 var max = data.values.max;
+     	//for (i = 0; i < timestamps.legnth; i++) {
+     		//if (timestamps[i] < max && timestamps[i] > min)
+     			//drop pin, else is outside bounds and is skipped
+     	//}
+	});
+    </script>
 
 	<footer>
 		</br>
@@ -47,7 +79,7 @@
 
 
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
-		<script type="text/javascript" src="js/jquery-1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="../js/jquery-1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="/js/underscore.min.js"></script>
 		<script type="text/javascript" src="/js/backbone.min.js"></script>
 		<script type="text/javascript" src="/js/prettify.min.js"></script>
@@ -55,23 +87,21 @@
 		<script type="text/javascript" src="/ui/jquery.ui.map.js"></script>
 
 		<script type="text/javascript">
-       $(function() { 
+       $(function() { 					
 					demo.add(function() {
 					$('#map_canvas').gmap({'center': '30.282788,-97.553101', 'zoom': 1, 'disableDefaultUI':true, 'callback': function() {
 						var self = this;
-						self.addMarker({'position': this.get('map').getCenter() }).mouseover(function() {
-							self.openInfoWindow({ 'content': '<img src="img/Cover.jpg" height="80px">' }, this);
+						self.addMarker({'position': '53.330873,-96.734619', 'bounds': false }).mouseover(function() {
+							self.openInfoWindow({ 'content': '<img src="../img/Cover.jpg" height="80px">' }, this);
 						});
-						self.addMarker({'position': '53.330873,-96.734619', 'bounds': false }).click(function() {
-							self.openInfoWindow({ 'content': '<img src="img/Cover.jpg">' }, this);
+						var urls = {{ img_urls|safe }};
+						$('#test') = urls;
+						var ll = {{ latlong|safe }};
+						for (i = 0; i < urls.length; i++) {
+						self.addMarker({'position': 'll[i]', 'bounds': false }).mouseover(function() {
+							self.openInfoWindow({ 'content': '<img src=urls[i] height="80px">' }, this);
 						});
-						self.addMarker({'position': '53.540307,-7.437744', 'bounds': false }).click(function() {
-							self.openInfoWindow({ 'content': '<img src="img/Cover.jpg">' }, this);
-						});
-						self.addMarker({'position': '32.694866,-117.171936', 'bounds': false }).mouseover(function() {
-							self.openInfoWindow({ 'content': '<img src="img/Cover.jpg" height="80px">' }, this);
-						});
-						
+						};
 
 					}});
 				}).load();			
@@ -79,8 +109,19 @@
 
 
    	</script> 
+		<div id="test"></div>
 
-
+<!-- 
+						self.addMarker({'position': '53.330873,-96.734619', 'bounds': false }).mouseover(function() {
+							self.openInfoWindow({ 'content': '<img src="../img/Cover.jpg" height="80px">' }, this);
+						});
+						self.addMarker({'position': '53.540307,-7.437744', 'bounds': false }).mouseover(function() {
+							self.openInfoWindow({ 'content': '<img src="../img/Cover.jpg" height="80px">' }, this);
+						});
+						self.addMarker({'position': '32.694866,-117.171936', 'bounds': false }).mouseover(function() {
+							self.openInfoWindow({ 'content': '<img src="../img/Cover.jpg" height="80px">' }, this);
+						});
+-->
 
 
 
